fix: prioritize complete builds over incomplete builds (#120)